--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>test</title>
   </head>
   <body>
-    <div id="app">Hhhh</div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
